name:          pbasm
version:       0.1.0
synopsis:      This project implements an assembler for the PicoBlaze (KCPSM6) microcontroller in the Haskell programming language.
homepage:      https://github.com/nullobject/pbasm
license:       BSD3
license-file:  LICENSE
author:        Josh Bassett
maintainer:    josh.bassett@gmail.com
build-type:    Simple
cabal-version: >=1.8

executable pbasm
  -- ghc-options:    -Wall
  hs-source-dirs: src
  main-is:        Main.hs
  build-depends:  base ==4.6.*
                , containers
                , parsec

test-suite spec
  type:           exitcode-stdio-1.0
  -- ghc-options:    -Wall -Werror
  hs-source-dirs: src, test
  main-is:        Spec.hs
  build-depends:  base ==4.6.*
                , containers
                , parsec
                , hspec
